[gd_scene load_steps=33 format=2]

[ext_resource path="res://Sprites/SavasciAttack.png" type="Texture" id=1]
[ext_resource path="res://Sprites/SavasciWalk.png" type="Texture" id=2]
[ext_resource path="res://Sprites/savasciIdle.png" type="Texture" id=3]
[ext_resource path="res://Scripts/unit2.gd" type="Script" id=4]
[ext_resource path="res://SFX/Attack.wav" type="AudioStream" id=5]

[sub_resource type="ShaderMaterial" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3.25927, 4.8921 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 14, 15 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 14, 0, 14, 15 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 28, 0, 14, 15 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 42, 0, 14, 15 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 56, 0, 14, 15 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 70, 0, 14, 15 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 84, 0, 14, 15 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 98, 0, 14, 15 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 112, 0, 14, 15 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 14, 15 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 14, 0, 14, 15 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 28, 0, 14, 15 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 42, 0, 14, 15 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 56, 0, 14, 15 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 70, 0, 14, 15 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 14, 15 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 14, 0, 14, 15 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 28, 0, 14, 15 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 42, 0, 14, 15 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 3 )
region = Rect2( 56, 0, 14, 15 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 3 )
region = Rect2( 70, 0, 14, 15 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 3 )
region = Rect2( 84, 0, 14, 15 )

[sub_resource type="SpriteFrames" id=25]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "Attack",
"speed": 8.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=26]
extents = Vector2( 3.62358, 5.15715 )

[sub_resource type="RectangleShape2D" id=27]
extents = Vector2( 9.34031, 0.598393 )

[node name="unit2" type="KinematicBody2D"]
material = SubResource( 1 )
z_index = 9
z_as_relative = false
collision_layer = 32
collision_mask = 96
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.181746, 1.09047 )
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 25 )
animation = "Idle"
frame = 5

[node name="DefendingArea" type="Area2D" parent="." groups=[
"Unit",
]]
collision_layer = 33024
collision_mask = 32768

[node name="CollisionShape2D" type="CollisionShape2D" parent="DefendingArea"]
position = Vector2( -0.206753, 0.827011 )
shape = SubResource( 26 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 5, 0 )
collision_mask = 96

[node name="attack_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -15.01
pitch_scale = 1.74

[node name="attack_timer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.125
autostart = true

[node name="AttackingArea" type="Area2D" parent="."]
monitorable = false
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackingArea"]
shape = SubResource( 27 )
[connection signal="area_entered" from="DefendingArea" to="." method="_on_DefendingArea_area_entered" flags=3]
[connection signal="timeout" from="attack_timer" to="." method="_on_attack_timer_timeout" flags=3]
